##Text encoding: utf-8

2010-01-01  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: post release version bump (0.11.5).
	* libs/gcp/tool.cc: don't allow clipboard operations by default.
	* plugins/paint/arrows/curvedarrowtool.cc: unselect all on click.
	* plugins/paint/atoms/orbital.cc: fixed copyright years.
	* plugins/paint/atoms/orbital.h: ditto.
	* plugins/paint/atoms/orbitaltool.cc: unselect all on click.
	* plugins/paint/atoms/orbitaltool.h: fixed copyright years.
	* plugins/paint/selection/selectiontool.h: allow clipboard operations.

2009-12-31  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/canvas.cc: add support for leave-notify-event.
	* libs/gccv/client.cc: ditto.
	* libs/gccv/client.h: ditto.
	* libs/gccv/hash.cc: do not call cairo_reset_clip to avoid issues with
	client side gtk+.
	* libs/gcp/tool.cc: add support for leave-notify-event.
	* libs/gcp/tool.h: ditto.
	* libs/gcp/view.cc: ditto.
	* libs/gcp/view.h: ditto.
	* plugins/paint/arrows/curvedarrowtool.cc: select potential source when
	moving the mouse to make clear from where the arrow would start.
	* plugins/paint/arrows/curvedarrowtool.h: ditto.
	* plugins/paint/atoms/orbitaltool.cc: implement OnDrag and ditto.
	* plugins/paint/atoms/orbitaltool.h: ditto.

2009-12-30  Jean Bréfort  <jean.brefort@normalesup.org>
	* plugins/paint/arrows/curvedarrowtool.cc: arrow from bond to adjacent atom
	now fully implemented.
	* plugins/paint/arrows/curvedarrowtool.h: ditto.

2009-12-29  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/group.cc: removed unused header.
	* libs/gcp/atom.cc: be careful with children (fixes orbital issues).
	* libs/gcp/widgetdata.cc: ditto.
	* plugins/paint/atoms/orbital.cc: implement gcpOrbital::SetSelected().
	* plugins/paint/atoms/orbital.h: ditto.

2009-12-28  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/Makefile.am: added new files.
	* libs/gccv/group.cc:fixed front/back logic.
	* libs/gccv/lemniscate.cc: new lemniscate item.